--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 
 <!-- HTML -->
 <video id='hls-example' class="video-js vjs-default-skin" width="640" height="480" controls>
-    <source type="application/x-mpegURL" src="http://127.0.0.1:8000/hls">
+    <source src="{server_url}/hls" type="application/x-mpegURL">
 </video>
 
 <!-- JS code -->
-<!-- If you'd like to support IE8 (for Video.js versions prior to v7) -->
-<script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
 <script src="https://vjs.zencdn.net/7.2.3/video.js"></script>
 
 <script>
